--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webovio</title>
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <header class="header">
-      <div class="header__container">
+      <div class="container header__container">
         <a class="logo">
-          <img src="" alt="Webovio logo" />
+          <img src="./assests/svg/logo.svg" alt="Webovio logo" />
         </a>
-        <button class="burger" aria-label="Open menu">
+        <button class="burger btn-reset" aria-label="Open menu">
           <span class="burger__line"></span>
           <span class="burger__line"></span>
           <span class="burger__line"></span>
@@ -21,7 +23,7 @@
     </header>
     <main class="main">
       <section class="hero">
-        <div class="hero__container">
+        <div class="container">
           <div class="hero__content">
             <span class="hero__subtitle"> A place where </span>
             <h1 class="hero__title">
@@ -31,17 +33,27 @@
               Anteelo is&nbsp;a&nbsp;leading strategic design firm that builds
               powerful digital solutions for startups and enterprises.
             </p>
-            <a href="" class="hero__link link">Get in touch</a>
+            <a href="" class="hero__link link">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+              >
+                <path d="M6 0l12 12-12 12z" />
+              </svg>
+              <span> Get in touch</span>
+            </a>
           </div>
         </div>
       </section>
       <section class="services">
-        <div class="services__container">
+        <div class="container">
           <h2 class="services__title">
             Deation &amp;&nbsp;Evaluation&nbsp;&mdash; Best Way to&nbsp;Kick off
             Your Product Idea
           </h2>
-          <ul class="services__list">
+          <ul class="services__list list-reset">
             <li class="services__list-item">
               <h3 class="services__subtitle">Product Design Sprint</h3>
               <p class="services__descriptin">
@@ -79,7 +91,7 @@
         </div>
       </section>
       <section class="get-started">
-        <div class="get-started__container">
+        <div class="container">
           <h2 class="get-started__title">
             Let&rsquo;s make something amazing together.
           </h2>
@@ -104,54 +116,54 @@
         <div class="footer__middle">
           <div class="footer__column">
             <h3 class="footer__title">Services</h3>
-            <ul class="footer__list">
-              <li class="footer__list">
+            <ul class="footer__list list-reset">
+              <li class="footer__list-item">
                 <a href="" class="footer__link">Strategy Design</a>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a href="" class="footer__link">Product Design</a>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a href="" class="footer__link">Content Strategy</a>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a href="" class="footer__link">Brand Strategy</a>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a href="" class="footer__link">Development </a>
               </li>
             </ul>
           </div>
           <div class="footer__column">
             <h3 class="footer__title">Help And Advice</h3>
-            <ul class="footer__list">
-              <li class="footer__list">
+            <ul class="footer__list list-reset">
+              <li class="footer__list-item">
                 <a href="" class="footer__link">How it works</a>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a href="" class="footer__link">Contact Support</a>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a href="" class="footer__link">Privacy Policy</a>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a href="" class="footer__link">FAQ</a>
               </li>
             </ul>
           </div>
           <div class="footer__column">
             <h3 class="footer__title">Company</h3>
-            <ul class="footer__list">
-              <li class="footer__list">
+            <ul class="footer__list list-reset">
+              <li class="footer__list-item">
                 <a href="" class="footer__link">About</a>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a href="" class="footer__link">Blog</a>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a href="" class="footer__link">Contact</a>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a href="" class="footer__link">Jobs</a>
               </li>
             </ul>
@@ -202,7 +214,7 @@
         </div>
         <div class="footer__bottom">
           <a class="logo">
-            <img src="" alt="Webovio logo" />
+            <img src="./assests/svg/logo.svg" alt="Webovio logo" />
           </a>
           <small class="footer__copyright"
             >&copy;&nbsp;2020@webovio. All Rights Reserved.</small
