--- a/index.html
+++ b/index.html
@@ -60,7 +60,17 @@
                 A&nbsp;five-day workshop that will help you answer crucial
                 business questions
               </p>
-              <a class="services__link link">Read More</a>
+              <a class="services__link link">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                >
+                  <path d="M6 0l12 12-12 12z" />
+                </svg>
+                <span>Read More</span>
+              </a>
             </li>
             <li class="services__list-item">
               <h3 class="services__subtitle">Scoping Session</h3>
@@ -68,24 +78,54 @@
                 A&nbsp;workshop aimed at&nbsp;shaping your business idea,
                 answering questions regarding project planning
               </p>
-              <a class="services__link link">Read More</a>
+              <a class="services__link link">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                >
+                  <path d="M6 0l12 12-12 12z" />
+                </svg>
+                <span>Read More</span></a
+              >
             </li>
             <li class="services__list-item">
-              <h3 class="services__subtitle">UX Review</h3>
+              <h3 class="services__subtitle">UX <br />Review</h3>
               <p class="services__descriptin">
                 An&nbsp;evaluation which will help you radically improve your
                 product.
               </p>
-              <a class="services__link link">Read More</a>
+              <a class="services__link link">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                >
+                  <path d="M6 0l12 12-12 12z" />
+                </svg>
+                <span>Read More</span></a
+              >
             </li>
             <li class="services__list-item">
-              <h3 class="services__subtitle">Code Review</h3>
+              <h3 class="services__subtitle">Code <br />Review</h3>
               <p class="services__descriptin">
                 Do&nbsp;you know what one of&nbsp;the key secrets
                 of&nbsp;success is&nbsp;what makes people successful
                 in&nbsp;business
               </p>
-              <a class="services__link link">Read More</a>
+              <a class="services__link link">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                >
+                  <path d="M6 0l12 12-12 12z" />
+                </svg>
+                <span>Read More</span></a
+              >
             </li>
           </ul>
         </div>
@@ -95,130 +135,142 @@
           <h2 class="get-started__title">
             Let&rsquo;s make something amazing together.
           </h2>
-          <a href="" class="get-started__link link">Let's get started</a>
+          <a class="get-started__link link">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+            >
+              <path d="M6 0l12 12-12 12z" />
+            </svg>
+            <span>Let's get started</span>
+          </a>
         </div>
       </section>
       <footer class="footer">
-        <div class="footer__top">
-          <div class="footer__contacts-item">
-            <span class="footer__contacts-text">Phone</span>
-            <a href="tel:+3250312832" class="footer__contacts-value"
-              >+32 50 31 28 32</a
+        <div class="container">
+          <div class="footer__top">
+            <div class="footer__contacts-item">
+              <span class="footer__contacts-text">Phone</span>
+              <a href="tel:+3250312832" class="footer__contacts-value"
+                >+32 50 31 28 32</a
+              >
+            </div>
+            <div class="footer__contacts-item">
+              <span class="footer__contacts-text">Address</span>
+              <address class="footer__contacts-value">
+                491 Merlin Crest Suite 963
+              </address>
+            </div>
+          </div>
+          <div class="footer__middle">
+            <div class="footer__column">
+              <h3 class="footer__title">Services</h3>
+              <ul class="footer__list list-reset">
+                <li class="footer__list-item">
+                  <a href="" class="footer__link">Strategy Design</a>
+                </li>
+                <li class="footer__list-item">
+                  <a href="" class="footer__link">Product Design</a>
+                </li>
+                <li class="footer__list-item">
+                  <a href="" class="footer__link">Content Strategy</a>
+                </li>
+                <li class="footer__list-item">
+                  <a href="" class="footer__link">Brand Strategy</a>
+                </li>
+                <li class="footer__list-item">
+                  <a href="" class="footer__link">Development </a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer__column">
+              <h3 class="footer__title">Help And Advice</h3>
+              <ul class="footer__list list-reset">
+                <li class="footer__list-item">
+                  <a href="" class="footer__link">How it works</a>
+                </li>
+                <li class="footer__list-item">
+                  <a href="" class="footer__link">Contact Support</a>
+                </li>
+                <li class="footer__list-item">
+                  <a href="" class="footer__link">Privacy Policy</a>
+                </li>
+                <li class="footer__list-item">
+                  <a href="" class="footer__link">FAQ</a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer__column">
+              <h3 class="footer__title">Company</h3>
+              <ul class="footer__list list-reset">
+                <li class="footer__list-item">
+                  <a href="" class="footer__link">About</a>
+                </li>
+                <li class="footer__list-item">
+                  <a href="" class="footer__link">Blog</a>
+                </li>
+                <li class="footer__list-item">
+                  <a href="" class="footer__link">Contact</a>
+                </li>
+                <li class="footer__list-item">
+                  <a href="" class="footer__link">Jobs</a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer__column">
+              <h3 class="footer__title">Get in Touch</h3>
+              <p class="footer__text">
+                Feel free to&nbsp;get in&nbsp;touch with&nbsp;us vai email
+              </p>
+              <a href="mailto:info.webovio@gmail.com" class="footer__mail"
+                >info.webovio@gmail.com
+              </a>
+              <ul class="social">
+                <li class="social-item">
+                  <a
+                    href="#"
+                    class="social__link social__link--facebook"
+                    target="_blank"
+                    aria-label="Link to Facebook"
+                  ></a>
+                </li>
+                <li class="social-item">
+                  <a
+                    href="#"
+                    class="social__link social__link--twitter"
+                    target="_blank"
+                    aria-label="Link to Twitter"
+                  ></a>
+                </li>
+                <li class="social-item">
+                  <a
+                    href="#"
+                    class="social__link social__link--google"
+                    target="_blank"
+                    aria-label="Link to Google+"
+                  ></a>
+                </li>
+                <li class="social-item">
+                  <a
+                    href="#"
+                    class="social__link social__link--linkedin"
+                    target="_blank"
+                    aria-label="Link to LinkedIn"
+                  ></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer__bottom">
+            <a class="logo">
+              <img src="./assests/svg/logo.svg" alt="Webovio logo" />
+            </a>
+            <small class="footer__copyright"
+              >&copy;&nbsp;2020@webovio. All Rights Reserved.</small
             >
           </div>
-          <div class="footer__contacts-item">
-            <span class="footer__contacts-text">Address</span>
-            <address class="footer__contacts-value">
-              491 Merlin Crest Suite 963
-            </address>
-          </div>
-        </div>
-        <div class="footer__middle">
-          <div class="footer__column">
-            <h3 class="footer__title">Services</h3>
-            <ul class="footer__list list-reset">
-              <li class="footer__list-item">
-                <a href="" class="footer__link">Strategy Design</a>
-              </li>
-              <li class="footer__list-item">
-                <a href="" class="footer__link">Product Design</a>
-              </li>
-              <li class="footer__list-item">
-                <a href="" class="footer__link">Content Strategy</a>
-              </li>
-              <li class="footer__list-item">
-                <a href="" class="footer__link">Brand Strategy</a>
-              </li>
-              <li class="footer__list-item">
-                <a href="" class="footer__link">Development </a>
-              </li>
-            </ul>
-          </div>
-          <div class="footer__column">
-            <h3 class="footer__title">Help And Advice</h3>
-            <ul class="footer__list list-reset">
-              <li class="footer__list-item">
-                <a href="" class="footer__link">How it works</a>
-              </li>
-              <li class="footer__list-item">
-                <a href="" class="footer__link">Contact Support</a>
-              </li>
-              <li class="footer__list-item">
-                <a href="" class="footer__link">Privacy Policy</a>
-              </li>
-              <li class="footer__list-item">
-                <a href="" class="footer__link">FAQ</a>
-              </li>
-            </ul>
-          </div>
-          <div class="footer__column">
-            <h3 class="footer__title">Company</h3>
-            <ul class="footer__list list-reset">
-              <li class="footer__list-item">
-                <a href="" class="footer__link">About</a>
-              </li>
-              <li class="footer__list-item">
-                <a href="" class="footer__link">Blog</a>
-              </li>
-              <li class="footer__list-item">
-                <a href="" class="footer__link">Contact</a>
-              </li>
-              <li class="footer__list-item">
-                <a href="" class="footer__link">Jobs</a>
-              </li>
-            </ul>
-          </div>
-          <div class="footer__column">
-            <h3 class="footer__title">Get in Touch</h3>
-            <p class="footer__text">
-              Feel free to&nbsp;get in&nbsp;touch with&nbsp;us vai email
-            </p>
-            <a href="mailto:info.webovio@gmail.com" class="footer__mail"
-              >info.webovio@gmail.com
-            </a>
-            <ul class="social">
-              <li class="social-item">
-                <a
-                  href="#"
-                  class="social__link social__link--facebook"
-                  target="_blank"
-                  aria-label="Link to Facebook"
-                ></a>
-              </li>
-              <li class="social-item">
-                <a
-                  href="#"
-                  class="social__link social__link--twitter"
-                  target="_blank"
-                  aria-label="Link to Twitter"
-                ></a>
-              </li>
-              <li class="social-item">
-                <a
-                  href="#"
-                  class="social__link social__link--google"
-                  target="_blank"
-                  aria-label="Link to Google+"
-                ></a>
-              </li>
-              <li class="social-item">
-                <a
-                  href="#"
-                  class="social__link social__link--linkedin"
-                  target="_blank"
-                  aria-label="Link to LinkedIn"
-                ></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="footer__bottom">
-          <a class="logo">
-            <img src="./assests/svg/logo.svg" alt="Webovio logo" />
-          </a>
-          <small class="footer__copyright"
-            >&copy;&nbsp;2020@webovio. All Rights Reserved.</small
-          >
         </div>
       </footer>
     </main>
